; ModuleID = '/home/carl/AnghaBench/poco/Data/SQLite/src/extr_sqlite3.c_cannotBeFunction.c'
source_filename = "/home/carl/AnghaBench/poco/Data/SQLite/src/extr_sqlite3.c_cannotBeFunction.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.SrcList_item = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }

@.str = private unnamed_addr constant [23 x i8] c"'%s' is not a function\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, %struct.SrcList_item*)* @cannotBeFunction to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cannotBeFunction(i32* %0, %struct.SrcList_item* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca %struct.SrcList_item*, align 8
  store i32* %0, i32** %4, align 8
  store %struct.SrcList_item* %1, %struct.SrcList_item** %5, align 8
  %6 = load %struct.SrcList_item*, %struct.SrcList_item** %5, align 8
  %7 = getelementptr inbounds %struct.SrcList_item, %struct.SrcList_item* %6, i32 0, i32 1
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %17

11:                                               ; preds = %2
  %12 = load i32*, i32** %4, align 8
  %13 = load %struct.SrcList_item*, %struct.SrcList_item** %5, align 8
  %14 = getelementptr inbounds %struct.SrcList_item, %struct.SrcList_item* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  %16 = call i32 @sqlite3ErrorMsg(i32* %12, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i32 %15)
  store i32 1, i32* %3, align 4
  br label %18

17:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %18

18:                                               ; preds = %17, %11
  %19 = load i32, i32* %3, align 4
  ret i32 %19
}

declare dso_local i32 @sqlite3ErrorMsg(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
